--- a/hw-1/hw-preamble.tex
+++ b/hw-1/hw-preamble.tex
@@ -70,15 +70,15 @@
   \end{center}
 }
 
-\newcommand{\goal}[1]{
-  \begin{center}{\fcolorbox{blue}{yellow!60}{\parbox{0.50\textwidth}{\large 
-    \begin{itemize}
-      \item 体会``思维的乐趣''
-      \item 初步了解递归与数学归纳法 
-      \item 初步接触算法概念与问题下界概念
-    \end{itemize}}}}
-  \end{center}
-}
+% \newcommand{\goal}[1]{
+%   \begin{center}{\fcolorbox{blue}{yellow!60}{\parbox{0.50\textwidth}{\large 
+%     \begin{itemize}
+%       \item 体会``思维的乐趣''
+%       \item 初步了解递归与数学归纳法 
+%       \item 初步接触算法概念与问题下界概念
+%     \end{itemize}}}}
+%   \end{center}
+% }
 
 % Each hw consists of four parts:
 \newcommand{\beginrequired}{\hspace{5em}\section{作业 (必做部分)}}
