--- a/hw-1/hw-preamble.tex
+++ b/hw-1/hw-preamble.tex
@@ -189,3 +189,5 @@
   \node [draw, circle, inner sep = 0.5pt, font = \tiny, minimum size = 8pt] (char) {#1};
 }
 \renewcommand\thefootnote{\protect\circled{\arabic{footnote}}}
+
+\newcommand{\score}[1]{{\bf [#1 分]}}
