--- a/hw-1/hw1.tex
+++ b/hw-1/hw1.tex
@@ -28,7 +28,7 @@
 %%%%%%%%%%%%%%%%%%%%
 \beginrequired
 %%%%%%%%%%%%%%%
-\begin{problem}[编译器, 然后呢?]
+\begin{problem}[编译器, 然后呢? \score{2}]
   观看系列视频 \href{https://www.bilibili.com/video/BV1EW411u7th?}{Crash Course Computer Science@bilibili}:
   \begin{itemize}
     \item $P5 \sim P8$; 总时长约45分钟
@@ -42,7 +42,7 @@
 %%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%
-\begin{problem}[手写词法分析器]
+\begin{problem}[手写词法分析器 \score{6}]
   根据下面的状态转移图以及课上介绍的识别方法, 给出识别数字
   (正整数、不带科学计数法的浮点数以及带科学计数法的浮点数)的伪代码。
   (推荐使用 \LaTeX{} 
@@ -61,7 +61,7 @@
 %%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%
-\begin{problem}[正则表达式]
+\begin{problem}[正则表达式 \score{2}]
   课堂上, 我们提到了下面的正则表达式可以用于识别所有(二进制表示的)3的倍数。
   请证明该结论(或给出直观的解释)。
   参考: \teal{\url{https://regex101.com/r/ED4qgC/1}}
