--- a/hw-2/hw2.tex
+++ b/hw-2/hw2.tex
@@ -28,32 +28,20 @@
 %%%%%%%%%%%%%%%%%%%%
 \beginrequired
 %%%%%%%%%%%%%%%
-\begin{problem}[$\epsilon$-NFA]
-  请设计算法将任一 $\epsilon$-NFA 转换成等价的不包含 $\epsilon$ 转移的 NFA,
-  并给出如下图所示的 $\epsilon$-NFA 的转换结果。
-\end{problem}
-
-\begin{solution}
-\end{solution}
-%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%
-\begin{problem}[]
+\begin{problem}[正则表达式与自动机 \score{10 = 2 + 3 + 2 + 2 + 1}]
   考虑正则表达式 $r = a(b|c)^{\ast}$。
-  \begin{itemize}
+  \begin{enumerate}[(1)]
     \item 使用 Thompson 构造法构造等价的 NFA;
     \item 使用子集构造法构造等价的 DFA;
     \item 将上一步构造的 DFA 最小化;
     \item 将上一步得到的最小 DFA 转化为等价的正则表达式, 记为 $r'$。
-  \end{itemize}
-\end{problem}
-
-\begin{solution}
-\end{solution}
-%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%
-\begin{problem}[]
+    \item $r'$ 与 $r$ 相同吗? 如果不同, 请将 $r'$ 化简为 $r$。
+  \end{enumerate}
+  以上各小题, 请给出关键的中间步骤。
+  
+  \noindent (不必给出所有的细节, 尽量将解答部分控制在一页以内。)
 \end{problem}
 
 \begin{solution}
