--- a/hw-3/hw3.tex
+++ b/hw-3/hw3.tex
@@ -19,7 +19,7 @@
 %%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
   % \mfigcap{width = 0.85\textwidth}{figs/George-Boole}{George Boole}
-  % \begin{center}{\fcolorbox{blue}{yellow!60}{\parbox{0.65\textwidth}{\large 
+  % \begin{center}{\fcolorbox{blue}{yellow!60}{\parbox{0.65\textwidth}{\large
   %   \begin{itemize}
   %     \item
   %   \end{itemize}}}}
@@ -30,15 +30,24 @@
 %%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%
-\begin{problem}[\score{4}]
-\end{problem}
+\begin{problem}[\score{10 = 2 + 2 + 2 + 1 + 3}]
+  给定下述文法$G$,
+  \begin{align}
+    S &\to aAb \\[8pt]
+    S &\to bAa \\[8pt]
+    A &\to cS \\[8pt]
+    A &\to \epsilon
+  \end{align}
 
-\begin{solution}
-\end{solution}
-%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%
-\begin{problem}[\score{6}]
+  \begin{enumerate}[(1)]
+    \item 为该文法计算必要的\first{}集合;
+    \item 为该文法计算必要的\follow{}集合;
+    \item 为该文法设计预测分析表;
+    \item 该文法是$LL(1)$文法吗? 请说明理由。
+    \item 如果该文法是$LL(1)$文法, 请给出相应的 $LL(1)$语法分析器的伪代码
+      (可以使用递归下降实现框架, 也可以使用非递归的版本);
+      如果该文法不是$LL(1)$文法, 请将其改造成 $LL(1)$ 文法 (不必再重复各小题)。
+  \end{enumerate}
 \end{problem}
 
 \begin{solution}
