--- a/2022/soloution/hw-1/hw1.tex
+++ b/2022/soloution/hw-1/hw1.tex
@@ -36,40 +36,46 @@
 			\item {\bf 作业:} 随便写点什么吧, 比如可以整理一下知识点, 比如哪些地方让你有恍然大悟的感觉。
 		\end{itemize}
 	\end{problem}
-	
+
 	\begin{solution}
-		随便写点内容就行。
+	  略。你``恍然大悟''了吗?
 	\end{solution}
 	%%%%%%%%%%%%%%%
-	
+
 	%%%%%%%%%%%%%%%
 	\begin{problem}[正则表达式]
 		请你解释解释这个正则表达式为什么表示``3的倍数(二进制表示)''?
-		
+
 		\[
 		\Big(0|\big(1(01^{\ast}0)^{\ast}1\big)\Big)^{\ast}
 		\]
-		
+
 		\begin{center}
 			\teal{\url{https://regex101.com/r/ED4qgC/1}}
 		\end{center}
 	\end{problem}
 	\begin{solution}
-		可以参考\url{https://www.geeksforgeeks.org/check-binary-string-multiple-3-using-dfa}了解如何用DFA检查二进制数是否能被3整除。 \\
-		可以参考\url{https://stackoverflow.com/questions/7974655/regex-for-binary-multiple-of-3/19608040#19608040}了解如何将上述DFA转化成正则表达式。
+	\begin{itemize}
+	  \item 参考 \url{https://www.geeksforgeeks.org/check-binary-string-multiple-3-using-dfa}\\
+		了解如何用 DFA 检查二进制数是否能被 3 整除\footnote[]{
+			嗯，这道题目放到 hw2 中或许更合适。
+		}。
+	  \item 参考 \url{https://stackoverflow.com/questions/7974655/regex-for-binary-multiple-of-3/19608040#19608040}\\
+		了解如何将上述 DFA 转化成正则表达式。
+	\end{itemize}
 	\end{solution}
 	%%%%%%%%%%%%%%%
-	
+
 	%%%%%%%%%%%%%%%%%%%%
 	% 如果没有需要订正的题目，可以把这部分删掉
-	
+
 	% \begincorrection
 	%%%%%%%%%%%%%%%%%%%%
-	
+
 	%%%%%%%%%%%%%%%%%%%%
 	% 如果没有反馈，可以把这部分删掉
 	\beginfb
-	
+
 	你可以写
 	\begin{itemize}
 		\item 对课程及教师的建议与意见
