fix hw4 solution

--- a/2022/soloution/hw-4/hw4.tex
+++ b/2022/soloution/hw-4/hw4.tex
@@ -49,7 +49,9 @@
   使用jflap工具\footnote{
   	\href{https://www.jflap.org/jflaptmp/}{jflap}是一款用于模拟自动机和形式语言理论中概念的软件。它可以在可视化界面中创建和模拟自动机和其他形式语言理论概念，比如解析$LL(1)$文法等。推荐大家学习使用该工具。
   }
-  生成如下结果：\\
+  生成如下结果\footnote{
+  	结果中的$\lambda$就是题中的$\epsilon$，因为在jflap中使用$\lambda$表示空串。
+  }：\\
   由于预测分析表没有冲突，所以是$LL(1)$文法
   \fig{width = 0.50\textwidth}{figs/jflap}
 \end{solution}
