--- a/2022/soloution/hw-2/hw2.tex
+++ b/2022/soloution/hw-2/hw2.tex
@@ -94,7 +94,7 @@
 		\hline
 		\textbf{NFA状态} 		& \textbf{DFA状态} & \textbf{0} & \textbf{1}	  \\ \hline
 		{0,1,2,3,8,9,11}      & A               & B          & C          	 \\ \hline
-		{5,9,10,11}           & B               & C          & C             \\ \hline
+		{5,9,10,11}           & B               & D          & E             \\ \hline
 		{1,2,3,4,7,8,9,11}    & C               & B          & C     		 \\ \hline
 		{9,10,11}             & D               & D          & $\varnothing$ \\ \hline
 		{1,2,3,6,7,8,9,11}    & E               & B			 & C     		 \\ \hline
