--- a/2023/hw-0/hw0.tex
+++ b/2023/hw-0/hw0.tex
@@ -18,12 +18,7 @@
 \noplagiarism % PLEASE DON'T DELETE THIS LINE!
 %%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-  % \mfigcap{width = 0.85\textwidth}{figs/George-Boole}{George Boole}
-  % \begin{center}{\fcolorbox{blue}{yellow!60}{\parbox{0.65\textwidth}{\large
-  %   \begin{itemize}
-  %     \item
-  %   \end{itemize}}}}
-  % \end{center}
+  \mfig{width = 1.00\textwidth}{figs/abstraction}
 \end{abstract}
 %%%%%%%%%%%%%%%%%%%%
 \beginrequired
@@ -32,7 +27,7 @@
   观看系列视频 \href{https://www.bilibili.com/video/BV1EW411u7th?}{Crash Course Computer Science@bilibili}:
   \begin{itemize}
     \item 观看 $P1 \sim P9$
-    \item 目的: 了解机器语言是如何跑起来的；见识视频中经常提到的``抽象(Abstract)''的力量
+    \item 目的: 了解机器语言是如何跑起来的；见识视频中经常提到的``抽象(\textsc{Abstraction})''的力量
     \item {\bf 作业:} 随便写点什么吧, 比如可以整理一下知识点, 比如哪些地方让你有恍然大悟的感觉。
   \end{itemize}
 \end{problem}
