--- a/2023/hw-5/hw5.tex
+++ b/2023/hw-5/hw5.tex
@@ -26,16 +26,13 @@
 
 %%%%%%%%%%%%%%%
 \begin{problem}
-  以下两个上下文无关文法均表示语言
-  $\set{x \in \set{a, b}^{\ast} \mid x \;\text{中}\; a, b \;\text{个数相同}}$。
+  请说明以下两个文法是否为 $LL(1)$ 文法?
 
   文法一:
   \input{cfg/cfg-equal-number-a-b}
 
   文法二:
   \input{cfg/cfg-a-b-lang}
-
-  请问, 这两个文法是否为 $LL(1)$ 文法?
 \end{problem}
 
 \begin{solution}
