--- a/2024/problem-set/hw-4/hw4.tex
+++ b/2024/problem-set/hw-4/hw4.tex
@@ -90,7 +90,7 @@
   $A$、$S$ 可为起始符号, 但 $B$、$C$ 均不可为起始符号。
   另外, 仅当 $\epsilon \in L(G)$ 时, $G$ 才需要符合第一条产生式规则。
   \begin{itemize}
-    \item 请证明, 任何上下文无关文法均可转化成等价的 Chmosky 范式形式。
+    \item 请证明, 任何上下文无关文法均可转化成等价的 Chomsky 范式形式。
   \end{itemize}
 \end{problem}
 
