--- a/2024/problem-set/hw-5/hw-preamble.tex
+++ b/2024/problem-set/hw-5/hw-preamble.tex
@@ -63,7 +63,8 @@
       请独立完成作业，不得抄袭。\\
       若得到他人帮助, 请致谢。\\
       若参考了其它资料，请给出引用。\\
-      鼓励讨论，但需独立书写解题过程。
+      鼓励讨论，但需独立书写解题过程。 \\[3pt]
+      \red{\bf 允许并鼓励使用 ChatGPT 等工具, 但需明确说明使用方式。}
     \end{tabular}}
   \end{center}
 }
@@ -200,8 +201,11 @@
 \newcommand{\dplusrm}{\xRightarrow[\text{rm}]{+}}
 \newcommand{\dstarrm}{\xRightarrow[\text{rm}]{\ast}}
 
-\newcommand{\first}{\textsc{First}}
-\newcommand{\follow}{\textsc{Follow}}
+\newcommand{\first}{\mathit{First}}
+\newcommand{\follow}{\mathit{Follow}}
+
+\newcommand{\declgrammar}{\mathcal{G}_{D}}
+\newcommand{\idkw}{\text{\bf id}}
 
 % see https://tex.stackexchange.com/a/109906/23098
 \usepackage{empheq}
