--- a/2024/problem-set/hw-7/hw7.tex
+++ b/2024/problem-set/hw-7/hw7.tex
@@ -10,7 +10,7 @@
 %%%%%%%%%%%%%%%%%%%%
 \title{编译原理作业 (7)}
 \me{\hspace{50pt}}{\hspace{70pt}}
-\date{2024年06月02日}
+\date{2024年06月08日}
 %%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \maketitle
@@ -24,17 +24,35 @@
 %%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%
-\begin{problem}
-\end{problem}
+\begin{problem}[RISC-V; 2023 年期末测试题目]
+	考虑如下计算第 $n$ 项 Fibonacci 数的 C 语言程序 \texttt{fib-rec.c}
+	\fig{width = 0.70\textwidth}{figs/fib-rec-c}
 
-\begin{solution}
-\end{solution}
+	下面两页给出了 \texttt{fib-rec.c} 对应的 RISC-V 代码片段,
+	{\bf 请填充缺失的代码行}。
+
+	{\bf 说明:}
+	\begin{itemize}
+		\item 第 17、23、49 行代码是相同的, 仅计一次分数。
+		\item 第 42 行处, 假设 \texttt{fib-rec.c} 中的 \texttt{n} 占 4 字节,
+		  也就是一个 \texttt{word} 大小。
+		\item 所有填充处{\bf 仅允许}使用如下指令 (包括伪指令; 汇编伪指令不限):
+			\texttt{li}、\texttt{add}、\texttt{addi}、\texttt{sub}、
+		  \texttt{ble}、\texttt{bge}、\texttt{lw}、\texttt{sw}、
+			\texttt{jal}、\texttt{jalr}、\texttt{ecall}、\texttt{j}、\texttt{la}。
+	\end{itemize}
+
+	\fig{width = 0.70\textwidth}{figs/fib-rec-25-blank}
+	\fig{width = 0.70\textwidth}{figs/fib-rec-49-blank}
+\end{problem}
 %%%%%%%%%%%%%%%
 
 % \pagebreak
 
 %%%%%%%%%%%%%%%
 \begin{problem}
+	编写两段 RISC-V 函数代码，
+	实现控制流在这两个函数之间``跳来跳去''的效果。
 \end{problem}
 
 \begin{solution}
@@ -43,11 +61,12 @@
 
 %%%%%%%%%%%%%%%
 \begin{problem}
+	阅读理解《The RISC-V Reader》\footnote{\href{https://github.com/courses-at-nju-by-hfwei/compilers-resources/blob/master/material/riscv/The\%20RISC-V\%20Reader\%20An\%20Open\%20Architecture\%20Atlas\%20(Chinese\%20Translation).pdf}
+	{The RISC-V Reader @ compilers-resources}}
+	\footnote{\href{https://github.com/courses-at-nju-by-hfwei/compilers-resources/blob/master/material/riscv/MIT\%206.191\%20(6.004)\%20RISC-V\%20ISA\%20Reference\%20Card.pdf}{MIT 6.191 (6.004) RISC-V ISA Reference Card @ compilers-resources}}
+	图 2.8 中插入排序 C 语言代码 (图 2.5)
+	对应的 RISC-V 代码。
 \end{problem}
-
-\begin{solution}
-
-\end{solution}
 %%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%
